# NetworkNext

./: .gitignore  CMakeLists.txt  CMakeSettings.json  soak.cpp  test.cpp
examples/: CMakeLists.txt  complex_client.cpp  complex_server.cpp  simple_client.cpp  simple_server.cpp  upgraded_client.cpp  upgraded_server.cpp
include/networknext/: next_config.h  next_memory_checks.h
sodium/: CMakeLists.txt
source/: CMakeLists.txt  next_address.cpp  next_autodetect.cpp  next_base64.cpp  next_hash.cpp  next_packet_filter.cpp  next_packets.cpp  next_platform_gdk.cpp  next_platform_mac.cpp  next_tests.cpp
src/: next.cpp  next_crypto.cpp  next_platform_linux.cpp  next_platform_windows.cpp  next_route_manager.cpp  next_server.cpp
src/next/: CMakeLists.txt  next_client.cpp  next_config.cpp  next_crypto.cpp  next_platform_ps4.cpp  next_platform_ps5.cpp  next_platform_switch.cpp
src/sodium/: CMakeLists.txt  sodium_aead_chacha20poly1305.c  sodium_aead_xchacha20poly1305.c  sodium_blake2b-compress-avx2.c  sodium_blake2b-compress-ref.c  sodium_blake2b-compress-sse41.c  sodium_blake2b-compress-ssse3.c  sodium_blake2b-ref.c  sodium_box_curve25519xchacha20poly1305.c  sodium_box_curve25519xsalsa20poly1305.c  sodium_box_seal_curve25519xchacha20poly1305.c  sodium_chacha20-ref.c  sodium_codecs.c  sodium_core.c  sodium_core_ed25519.c  sodium_core_hchacha20.c  sodium_core_hsalsa20.c  sodium_core_hsalsa20_ref2.c  sodium_core_salsa_ref.c  sodium_crypto_box.c  sodium_crypto_box_easy.c  sodium_crypto_generichash.c  sodium_crypto_hash_sha256.c  sodium_crypto_hash_sha256_cp.c  sodium_crypto_kx.c  sodium_crypto_scalarmult.c  sodium_crypto_secretbox.c  sodium_crypto_secretbox_easy.c  sodium_crypto_sign.c  sodium_dolbeau_chacha20-avx2.c  sodium_dolbeau_chacha20-ssse3.c  sodium_generichash_blake2.c  sodium_generichash_blake2b.c  sodium_hash_sha512.c  sodium_hash_sha512_cp.c  sodium_onetimeauth_poly1305.c  sodium_poly1305-sse2.c  sodium_poly1305_donna.c  sodium_randombytes.c  sodium_randombytes_salsa20_random.c  (+32 more)
